[project]
name = "meditations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "llama-index>=0.14.16",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-groq>=0.5.0",
    "llama-index-vector-stores-chroma>=0.5.5",
    "marimo>=0.23.5",
]
